2/3 màn pc, chưa responsive

--- a/flower-store/index.html
+++ b/flower-store/index.html
@@ -17,10 +17,10 @@
             <div class="container">
                 <nav class="navbar navbar-expand-md">
                     <a class="navbar-brand" href="">
-                        <img class="nav_pic" src="./assets/img/logo.png" alt="">
+                        <img class="nav_pic" src="./assets/img/logo.png" alt="logo_page">
                     </a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"><img src="./assets/img/menu.png" alt=""></span>
+                        <span class="navbar-toggler-icon"><img src="./assets/img/menu.png" alt="small_menu"></span>
                     </button>
                     <div class="box_collapse collapse navbar-collapse" id="navbarNavAltMarkup">
                         <div class="navbar-nav mx-auto">
@@ -32,10 +32,10 @@
                         </div>
                         <div class="box_session navbar-text">
                             <a href="">
-                                <img src="./assets/img/session.png" alt="">
+                                <img src="./assets/img/session.png" alt="user_logo">
                             </a>
                             <a href="">
-                                <img src="./assets/img/cart.png" alt="">
+                                <img src="./assets/img/cart.png" alt="cart_logo">
                             </a>
                         </div>
                     </div>
@@ -66,7 +66,7 @@
 
                 <div class="col-md-6 box_banner">
                     <div class="banner_photo">
-                        <img class="img_banner" src="./assets/img/banner_img.png" alt="">
+                        <img class="img_banner" src="./assets/img/banner_img.png" alt="banner_photo">
                     </div>
                 </div>
             </div>
@@ -112,7 +112,7 @@
                                 <div class="col-md-3"> 
                                     <div class="smallbox_product">
                                         <div class="product_img">
-                                            <img class="product_pic" src="./assets/img/prd1.png" alt="">
+                                            <img class="product_pic" src="./assets/img/prd1.png" alt="product_photo">
                                         </div>
                                         <div class="like_product">
                                             <i class="far fa-heart love_icon"></i>
@@ -128,7 +128,7 @@
                                 <div class="col-md-3">
                                     <div class="smallbox_product">
                                         <div class="product_img">
-                                            <img class="product_pic" src="./assets/img/prd2.png" alt="">
+                                            <img class="product_pic" src="./assets/img/prd2.png" alt="product_photo">
                                         </div>
                                         <div class="like_product">
                                             <i class="far fa-heart love_icon"></i>
@@ -144,7 +144,7 @@
                                 <div class="col-md-3">
                                     <div class="smallbox_product">
                                         <div class="product_img">
-                                            <img class="product_pic" src="./assets/img/prd3.png" alt="">
+                                            <img class="product_pic" src="./assets/img/prd3.png" alt="product_photo">
                                         </div>
                                         <div class="like_product">
                                             <i class="far fa-heart love_icon"></i>
@@ -160,7 +160,7 @@
                                 <div class="col-md-3">
                                     <div class="smallbox_product">
                                         <div class="product_img">
-                                            <img class="product_pic" src="./assets/img/prd4.png" alt="">
+                                            <img class="product_pic" src="./assets/img/prd4.png" alt="product_photo">
                                         </div>
                                         <div class="like_product">
                                             <i class="far fa-heart love_icon"></i>
@@ -180,7 +180,7 @@
                                 <div class="col-md-3"> 
                                     <div class="smallbox_product">
                                         <div class="product_img">
-                                            <img class="product_pic" src="./assets/img/prd1.png" alt="">
+                                            <img class="product_pic" src="./assets/img/prd1.png" alt="product_photo">
                                         </div>
                                         <div class="like_product">
                                             <i class="far fa-heart love_icon"></i>
@@ -195,7 +195,7 @@
                                 <div class="col-md-3">
                                     <div class="smallbox_product">
                                         <div class="product_img">
-                                            <img class="product_pic" src="./assets/img/prd2.png" alt="">
+                                            <img class="product_pic" src="./assets/img/prd2.png" alt="product_photo">
                                         </div>
                                         <div class="like_product">
                                             <i class="far fa-heart love_icon"></i>
@@ -210,7 +210,7 @@
                                 <div class="col-md-3">
                                     <div class="smallbox_product">
                                         <div class="product_img">
-                                            <img class="product_pic" src="./assets/img/prd3.png" alt="">
+                                            <img class="product_pic" src="./assets/img/prd3.png" alt="product_photo">
                                         </div>
                                         <div class="like_product">
                                             <i class="far fa-heart love_icon"></i>
@@ -225,7 +225,7 @@
                                 <div class="col-md-3">
                                     <div class="smallbox_product">
                                         <div class="product_img">
-                                            <img class="product_pic" src="./assets/img/prd4.png" alt="">
+                                            <img class="product_pic" src="./assets/img/prd4.png" alt="product_photo">
                                         </div>
                                         <div class="like_product">
                                             <i class="far fa-heart love_icon"></i>
@@ -248,10 +248,10 @@
 
                         <div class="box_button">
                             <button class="carousel-control-next ml-3" type="button" data-target="#carouselExampleControls" data-slide="next">
-                                <img src="./assets/img/next_btn.png" alt="">
+                                <img src="./assets/img/next_btn.png" alt="button">
                             </button>
                             <button class="carousel-control-prev mr-3" type="button" data-target="#carouselExampleControls" data-slide="prev">
-                                <img src="./assets/img/prev_btn.png" alt="">
+                                <img src="./assets/img/prev_btn.png" alt="button">
                             </button>
                             
                         </div>
@@ -270,7 +270,7 @@
                         <div class="carousel-item active">
                             <div class="smallbox_product">
                                 <div class="product_img">
-                                    <img class="product_pic" src="./assets/img/prd1.png" alt="">
+                                    <img class="product_pic" src="./assets/img/prd1.png" alt="product_photo">
                                 </div>
                                 <div class="like_product">
                                     <i class="far fa-heart love_icon"></i>
@@ -285,7 +285,7 @@
                         <div class="carousel-item">
                             <div class="smallbox_product">
                                 <div class="product_img">
-                                    <img class="product_pic" src="./assets/img/prd2.png" alt="">
+                                    <img class="product_pic" src="./assets/img/prd2.png" alt="product_photo">
                                 </div>
                                 <div class="like_product">
                                     <i class="far fa-heart love_icon"></i>
@@ -300,7 +300,7 @@
                         <div class="carousel-item">
                             <div class="smallbox_product">
                                 <div class="product_img">
-                                    <img class="product_pic" src="./assets/img/prd3.png" alt="">
+                                    <img class="product_pic" src="./assets/img/prd3.png" alt="product_photo">
                                 </div>
                                 <div class="like_product">
                                     <i class="far fa-heart love_icon"></i>
@@ -382,7 +382,7 @@
                     </div>
                     <div class="col-md-6 offer_detail">
                         <div class="offer_photo">
-                            <img class="offer_pic" src="./assets/img/offer_img.png" alt="">
+                            <img class="offer_pic" src="./assets/img/offer_img.png" alt="offer_photo">
                         </div>
                     </div>
                 </div>
@@ -399,7 +399,7 @@
                         <div class="row no-gutters">
                             <div class="col-md-6">
                                 <div class="feature_img wow slideInLeft">
-                                    <img src="./assets/img/blog1.png" alt="">
+                                    <img src="./assets/img/blog1.png" alt="blog_photo">
                                 </div>
                             </div>
                             <div class="col-md-6">
@@ -419,7 +419,7 @@
                         <div class="row no-gutters">
                             <div class="col-md-6">
                                 <div class="feature_img wow slideInLeft">
-                                    <img src="./assets/img/blog2.png" alt="">
+                                    <img src="./assets/img/blog2.png" alt="blog_photo">
                                 </div>
                             </div>
                             <div class="col-md-6">
@@ -439,7 +439,7 @@
                         <div class="row no-gutters">
                             <div class="col-md-6">
                                 <div class="feature_img wow slideInLeft">
-                                    <img src="./assets/img/blog3.png" alt="">
+                                    <img src="./assets/img/blog3.png" alt="blog_photo">
                                 </div>
                             </div>
                             <div class="col-md-6">
