complete responsive, lỗi Swiper

--- a/Lalisa-page/footer.html
+++ b/Lalisa-page/footer.html
@@ -10,21 +10,21 @@
                     <p class="title_text"><a href="product.html">Product</a></p>
                 </div>
                 <div class="list_services">
-                    <p class="description_text"><a href="">New Arrivals</a></p>
-                    <p class="description_text"><a href="">Best Selling</a></p>
-                    <p class="description_text"><a href="">Home Decor</a></p>
-                    <p class="description_text"><a href="">Kitchen Set</a></p>
+                    <a href=""><p class="description_text">New Arrivals</p></a>
+                    <a href=""><p class="description_text">Best Selling</p></a>
+                    <a href=""><p class="description_text">Home Decor</p></a>
+                    <a href=""><p class="description_text">Kitchen Set</p></a>
                 </div>
             </div>
             <div class="detial_service">
                 <div class="title_services">
-                    <p class="title_text"><a href="services.html ">Services</a></p>
+                    <p class="title_text"><a href="services.html ">Services</p></a>
                 </div>
                 <div class="list_services">
-                    <p class="description_text"><a href="">Catalog</a></p>
-                    <p class="description_text"><a href="">Blog</a></p>
-                    <p class="description_text"><a href="">FaQ</a></p>
-                    <p class="description_text"><a href="">Pricing</a></p>
+                    <a href=""><p class="description_text">Catalog</p></a>
+                    <a href=""><p class="description_text">Blog</p></a>
+                    <a href=""><p class="description_text">FaQ</p></a>
+                    <a href=""><p class="description_text">Pricing</p></a>
                 </div>
             </div>
             <div class="detial_service">
@@ -32,9 +32,9 @@
                     <p class="title_text">Follow Us</p>
                 </div>
                 <div class="list_services">
-                    <p class="description_text"><a href="">Facebook</a></p>
-                    <p class="description_text"><a href="">Instagram</a></p>
-                    <p class="description_text"><a href="">Twitter</a></p>
+                    <a href=""><p class="description_text">Facebook</p></a>
+                    <a href=""><p class="description_text">Instagram</p></a>
+                    <a href=""><p class="description_text">Twitter</p></a>
                 </div>
             </div>
         </div>
