--- a/Lalisa-page/header.html
+++ b/Lalisa-page/header.html
@@ -1,6 +1,6 @@
 <div class="container">
     <nav class="navbar navbar-expand-lg">
-        <a class="navbar-brand" href="#"><img src="./assets/img/logo.png" alt=""></a>
+        <a class="navbar-brand" href="index.html"><img src="./assets/img/logo.png" alt=""></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"><img src="./assets/img/menu.png" alt=""></span>
         </button>
