--- a/Lalisa-page/product.html
+++ b/Lalisa-page/product.html
@@ -57,10 +57,30 @@
                             <div class="banner_pic">
                                 <img src="./assets/img/banner_product.png" alt="">
                             </div>
+                            <div class="detail_banner carousel-caption align-items-center d-none d-md-block container">
+                                <div class="button_group">
+                                    <a href="" class="btn btn_group">Discount</a>
+                                </div>
+                                <div class="title_banner">
+                                    <p class="title_text">Ramadhan Sale Offer</p>
+                                    <p class="description_text">Get 40% off for the first transaction
+                                        on Lalasia</p>
+                                </div>
+                            </div>
                         </div>
                         <div class="small_banner swiper-slide">
                             <div class="banner_pic">
                                 <img src="./assets/img/banner_product.png" alt="">
+                            </div>
+                            <div class="detail_banner carousel-caption align-items-center d-none d-md-block container">
+                                <div class="button_group">
+                                    <a href="" class="btn btn_group">Discount</a>
+                                </div>
+                                <div class="title_banner">
+                                    <p class="title_text">Ramadhan Sale Offer</p>
+                                    <p class="description_text">Get 40% off for the first transaction
+                                        on Lalasia</p>
+                                </div>
                             </div>
                         </div>
                    </div>
