--- a/Lalisa-page/header.html
+++ b/Lalisa-page/header.html
@@ -11,22 +11,22 @@
                     <a class="nav-link" href="product.html">Product</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Services</a>
+                    <a class="nav-link" href="services.html">Services</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Article</a>
+                    <a class="nav-link" href="article.html">Article</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">About Us</a>
+                    <a class="nav-link" href="aboutus.html">About Us</a>
                 </li>
             </ul>
             <div class="my-2 my-lg-0">
                 <div class="options_navbar">
                     <a class="icon_option" href="">
-                        <img src="/assets/img/cart.png" alt="">
+                        <img src="./assets/img/cart.png" alt="">
                     </a>
                     <a class="icon_option" href="">
-                        <img src="/assets/img/user.png" alt="">
+                        <img src="./assets/img/user.png" alt="">
                     </a>
                 </div>
             </div>
