--- a/Lalisa-page/product.html
+++ b/Lalisa-page/product.html
@@ -18,7 +18,43 @@
 
 <body>
     <header>
-        <div class="block_header"></div>
+        <div class="block_header">
+            <div class="container">
+                <nav class="navbar navbar-expand-lg">
+                    <a class="navbar-brand" href="index.html"><img src="./assets/img/logo.png" alt=""></a>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"><img src="./assets/img/menu.png" alt=""></span>
+                    </button>
+                    
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="navbar-nav mx-auto">
+                            <li class="nav-item page_landing">
+                                <a class="nav-link" href="product.html">Product</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="services.html">Services</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="article.html">Article</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="aboutus.html">About Us</a>
+                            </li>
+                        </ul>
+                        <div class="my-2 my-lg-0">
+                            <div class="options_navbar">
+                                <a class="icon_option" href="">
+                                    <img src="./assets/img/cart.png" alt="">
+                                </a>
+                                <a class="icon_option" href="">
+                                    <img src="./assets/img/user.png" alt="">
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </nav>
+            </div>
+        </div>
     </header>
 
     <main>
@@ -138,19 +174,19 @@
                         <div class="col-md-4">
                             <div class="box_product">
                                 <div class="product_picture">
-                                    <img src="./assets/img/product_demo3.png" alt="Product">
+                                    <img src="./assets/img/product_demo1.png" alt="Product">
                                 </div>
                                 <div class="cate_product">
-                                    <a href=""><p class="description_text">Cupboard </p></a>
+                                    <a href=""><p class="description_text">Chair</p></a>
                                 </div>
                                 <div class="name_product">
-                                    <a href=""><p class="title_text">Wooden Bookshelf</p></a>
+                                    <a href=""><p class="title_text">White Aesthetic Chair</p></a>
                                 </div>
                                 <div class="detail_product">
                                     <p class="description_text">Combination of wood and wool</p>
                                 </div>
                                 <div class="product_cost">
-                                    <p class="title_text">$79.88</p>
+                                    <p class="title_text">$63.47</p>
                                 </div>
                             </div>
                         </div>
@@ -178,7 +214,47 @@
                         <div class="col-md-4">
                             <div class="box_product">
                                 <div class="product_picture">
-                                    <img src="./assets/img/product_demo3.png" alt="Product">
+                                    <img src="./assets/img/product_demo4.png" alt="Product">
+                                </div>
+                                <div class="cate_product">
+                                    <a href=""><p class="description_text">Chair </p></a>
+                                </div>
+                                <div class="name_product">
+                                    <a href=""><p class="title_text">Minimalist Lounge Chair</p></a>
+                                </div>
+                                <div class="detail_product">
+                                    <p class="description_text">Combination of wood and wool</p>
+                                </div>
+                                <div class="product_cost">
+                                    <p class="title_text">$14.74</p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-md-4">
+                            <div class="box_product">
+                                <div class="product_picture">
+                                    <img src="./assets/img/product_demo5.png" alt="Product">
+                                </div>
+                                <div class="cate_product">
+                                    <a href=""><p class="description_text">Table </p></a>
+                                </div>
+                                <div class="name_product">
+                                    <a href=""><p class="title_text">Working Desk Setup</p></a>
+                                </div>
+                                <div class="detail_product">
+                                    <p class="description_text">Combination of wood and wool</p>
+                                </div>
+                                <div class="product_cost">
+                                    <p class="title_text">$47.90</p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-md-4">
+                            <div class="box_product">
+                                <div class="product_picture">
+                                    <img src="./assets/img/product_demo6.png" alt="Product">
                                 </div>
                                 <div class="cate_product">
                                     <a href=""><p class="description_text">Cupboard </p></a>
@@ -198,19 +274,19 @@
                         <div class="col-md-4">
                             <div class="box_product">
                                 <div class="product_picture">
-                                    <img src="./assets/img/product_demo3.png" alt="Product">
+                                    <img src="./assets/img/product_demo7.png" alt="Product">
                                 </div>
                                 <div class="cate_product">
-                                    <a href=""><p class="description_text">Cupboard </p></a>
+                                    <a href=""><p class="description_text">Table </p></a>
                                 </div>
                                 <div class="name_product">
-                                    <a href=""><p class="title_text">Wooden Bookshelf</p></a>
+                                    <a href=""><p class="title_text">Wooden Dining Table</p></a>
                                 </div>
                                 <div class="detail_product">
                                     <p class="description_text">Combination of wood and wool</p>
                                 </div>
                                 <div class="product_cost">
-                                    <p class="title_text">$79.88</p>
+                                    <p class="title_text">$16.50</p>
                                 </div>
                             </div>
                         </div>
@@ -218,19 +294,19 @@
                         <div class="col-md-4">
                             <div class="box_product">
                                 <div class="product_picture">
-                                    <img src="./assets/img/product_demo3.png" alt="Product">
+                                    <img src="./assets/img/product_demo8.png" alt="Product">
                                 </div>
                                 <div class="cate_product">
-                                    <a href=""><p class="description_text">Cupboard </p></a>
+                                    <a href=""><p class="description_text">Decoration </p></a>
                                 </div>
                                 <div class="name_product">
-                                    <a href=""><p class="title_text">Wooden Bookshelf</p></a>
+                                    <a href=""><p class="title_text">White Minimalist Vase</p></a>
                                 </div>
                                 <div class="detail_product">
                                     <p class="description_text">Combination of wood and wool</p>
                                 </div>
                                 <div class="product_cost">
-                                    <p class="title_text">$79.88</p>
+                                    <p class="title_text">$58.39</p>
                                 </div>
                             </div>
                         </div>
@@ -238,19 +314,19 @@
                         <div class="col-md-4">
                             <div class="box_product">
                                 <div class="product_picture">
-                                    <img src="./assets/img/product_demo3.png" alt="Product">
+                                    <img src="./assets/img/product_demo9.png" alt="Product">
                                 </div>
                                 <div class="cate_product">
-                                    <a href=""><p class="description_text">Cupboard </p></a>
+                                    <a href=""><p class="description_text">Decoration </p></a>
                                 </div>
                                 <div class="name_product">
-                                    <a href=""><p class="title_text">Wooden Bookshelf</p></a>
+                                    <a href=""><p class="title_text">Plant With Clay Stand</p></a>
                                 </div>
                                 <div class="detail_product">
                                     <p class="description_text">Combination of wood and wool</p>
                                 </div>
                                 <div class="product_cost">
-                                    <p class="title_text">$79.88</p>
+                                    <p class="title_text">$61.49</p>
                                 </div>
                             </div>
                         </div>
@@ -258,59 +334,19 @@
                         <div class="col-md-4">
                             <div class="box_product">
                                 <div class="product_picture">
-                                    <img src="./assets/img/product_demo3.png" alt="Product">
+                                    <img src="./assets/img/product_demo10.png" alt="Product">
                                 </div>
                                 <div class="cate_product">
-                                    <a href=""><p class="description_text">Cupboard </p></a>
+                                    <a href=""><p class="description_text">Decoration </p></a>
                                 </div>
                                 <div class="name_product">
-                                    <a href=""><p class="title_text">Wooden Bookshelf</p></a>
+                                    <a href=""><p class="title_text">Oval Gold Mirror</p></a>
                                 </div>
                                 <div class="detail_product">
                                     <p class="description_text">Combination of wood and wool</p>
                                 </div>
                                 <div class="product_cost">
-                                    <p class="title_text">$79.88</p>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="col-md-4">
-                            <div class="box_product">
-                                <div class="product_picture">
-                                    <img src="./assets/img/product_demo3.png" alt="Product">
-                                </div>
-                                <div class="cate_product">
-                                    <a href=""><p class="description_text">Cupboard </p></a>
-                                </div>
-                                <div class="name_product">
-                                    <a href=""><p class="title_text">Wooden Bookshelf</p></a>
-                                </div>
-                                <div class="detail_product">
-                                    <p class="description_text">Combination of wood and wool</p>
-                                </div>
-                                <div class="product_cost">
-                                    <p class="title_text">$79.88</p>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="col-md-4">
-                            <div class="box_product">
-                                <div class="product_picture">
-                                    <img src="./assets/img/product_demo3.png" alt="Product">
-                                </div>
-                                <div class="cate_product">
-                                    <a href=""><p class="description_text">Cupboard </p></a>
-                                </div>
-                                <div class="name_product">
-                                    <a href=""><p class="title_text">Wooden Bookshelf</p></a>
-                                </div>
-                                <div class="detail_product">
-                                    <p class="description_text">Combination of wood and wool</p>
-                                </div>
-                                <div class="product_cost">
-                                    <p class="title_text">$79.88</p>
+                                    <p class="title_text">$32.43</p>
                                 </div>
                             </div>
                         </div>
@@ -321,15 +357,17 @@
                             <ul class="pagination justify-content-center">
                               <li class="page-item">
                                 <a class="page-link" href="#" aria-label="Previous">
-                                  <span aria-hidden="true">&laquo;</span>
+                                  <span aria-hidden="true">	&lt;</span>
                                 </a>
                               </li>
                               <li class="page-item active" aria-current="page"><a class="page-link" href="#">1</a></li>
                               <li class="page-item"><a class="page-link" href="#">2</a></li>
                               <li class="page-item"><a class="page-link" href="#">3</a></li>
+                              <li class="page-item"><a class="page-link" href="#">...</a></li>
+                              <li class="page-item"><a class="page-link" href="#">10</a></li>
                               <li class="page-item">
                                 <a class="page-link" href="#" aria-label="Next">
-                                  <span aria-hidden="true">&raquo;</span>
+                                  <span aria-hidden="true">&gt;</span>
                                 </a>
                               </li>
                             </ul>
@@ -345,7 +383,48 @@
     <footer>
         <!-- This is footer  -->
         <div class="block_footer">
-            
+            <div class="container">
+                <div class="box_aboutus d-flex">
+                    <div class="detail_aboutus">
+                        <a class="navbar-brand" href="#"><img src="./assets/img/logo.png" alt=""></a>
+                        <p class="description_text">Lalasia is digital agency that help you make better experience iaculis cras in.</p>
+                    </div>
+                    <div class="box_services">
+                        <div class="detial_service">
+                            <div class="title_services">
+                                <p class="title_text"><a href="product.html">Product</a></p>
+                            </div>
+                            <div class="list_services">
+                                <a href=""><p class="description_text">New Arrivals</p></a>
+                                <a href=""><p class="description_text">Best Selling</p></a>
+                                <a href=""><p class="description_text">Home Decor</p></a>
+                                <a href=""><p class="description_text">Kitchen Set</p></a>
+                            </div>
+                        </div>
+                        <div class="detial_service">
+                            <div class="title_services">
+                                <p class="title_text"><a href="services.html ">Services</p></a>
+                            </div>
+                            <div class="list_services">
+                                <a href=""><p class="description_text">Catalog</p></a>
+                                <a href=""><p class="description_text">Blog</p></a>
+                                <a href=""><p class="description_text">FaQ</p></a>
+                                <a href=""><p class="description_text">Pricing</p></a>
+                            </div>
+                        </div>
+                        <div class="detial_service">
+                            <div class="title_services">
+                                <p class="title_text">Follow Us</p>
+                            </div>
+                            <div class="list_services">
+                                <a href=""><p class="description_text">Facebook</p></a>
+                                <a href=""><p class="description_text">Instagram</p></a>
+                                <a href=""><p class="description_text">Twitter</p></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </footer>
 
@@ -356,12 +435,6 @@
     <script src="./assets/js/bootstrap.min.js"></script>
     <script src="./assets/js/all.min.js"></script>
     <script src="./assets/js/product.js"></script>
-    <script>
-        $(function () {
-            $('.block_header').load("header.html");
-            $('.block_footer').load("footer.html");
-        });
-    </script>
 </body>
 
 </html>
