--- a/ngantt-italian-food/index.html
+++ b/ngantt-italian-food/index.html
@@ -20,7 +20,6 @@
                     </div>
                     <img src="./assets/img/iphone.png" class="intro__start-icon">
                 </div>
-
             </div>
             
             <!-- start nav -->
@@ -49,7 +48,6 @@
 
         <!-- start banner-->
         <div id="header-banner">
-        <!-- start banner -->
             <div class="banner">
                 <div class="banner__content">
                     <div class="banner__content-subtitle">
@@ -74,7 +72,7 @@
                 </div>
             </div>
         </div>
-
+        <!-- end banner-->
         <main>
  
         </main>
