--- a/ngantt-italian-food/index.html
+++ b/ngantt-italian-food/index.html
@@ -6,79 +6,221 @@
         <title>Exercise - Second week</title>
         <link rel="stylesheet" href="./assets/css/index.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha512-SfTiTlX6kk+qitfevl/7LibUOeJWlt9rbyDn92a1DqWOw9vWG2MFoays0sgObmWazO5BQPiFucnnEAjpAB+/Sw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css" integrity="sha512-yHknP1/AwR+yx26cB1y0cjvQUMvEa2PFzt1c9LlS4pRQ5NOTZFWbhBig+X9G9eYW/8m0/4OXNx8pxJ6z57x0dw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     </head>
 
     <body>
         <!-- start header -->
-        <header>
-            <div class="intro">
-                <img src="./assets/img/logo.png" alt="" class="intro__logo">
-                <div class="intro__start">
-                    <div class="intro__start-contact">
-                        <p class="intro__start-contact-title">Express delivery</p>
-                        <p class="intro__start-contact-phone">1800 528 888</p>
-                    </div>
-                    <img src="./assets/img/iphone.png" class="intro__start-icon">
-                </div>
-            </div>
-            <!-- start nav -->
-            <nav class="nav">
-                <input type="checkbox" id="nav__click">
-                <label for="nav__click" class="intro__btn">
-                    <i class="fa fa-bars" aria-hidden="true"></i>
-                </label>
-                <ul class="nav__bar">
-                    <li class="nav__bar-item"> <a href="#" class="nav__bar-item-link">Home</a> </li>
-                    <li class="nav__bar-item"> <a href="#" class="nav__bar-item-link">Menu</a> </li>
-                    <li class="nav__bar-item"> <a href="#" class="nav__bar-item-link">Our story</a> </li>
-                    <li class="nav__bar-item"> <a href="#" class="nav__bar-item-link">Contact us</a> </li>
-                    <li class="intro__start nav__bar-intro">
-                        <div class="intro__start-contact nav__bar-intro-contact">
+        <div id="header-banner">
+            <header>
+                <div class="intro">
+                    <a href="#"><img src="./assets/img/logo.png" alt="" class="intro__logo logo"></a>
+                    <div class="intro__start">
+                        <div class="intro__start-contact">
                             <p class="intro__start-contact-title">Express delivery</p>
-                            <p class="intro__start-contact-phone">1800 528 888</p>
+                            <p class="intro__start-contact-phone"><a href="tel:1800 528 888">1800 528 888</a></p>
                         </div>
-                        <i class="fa fa-mobile nav__bar-intro-icon" aria-hidden="true"></i>
-                    </li>
-                </ul>
-            </nav>
-            <!-- end nav -->
-        </header>
+                        <img src="./assets/img/iphone.png" class="intro__start-icon">
+                    </div>
+                </div>
+                <!-- start nav -->
+                <nav class="nav">
+                    <input type="checkbox" id="click">
+                    <label for="click" class="intro__btn">
+                        <i class="fa fa-bars" aria-hidden="true"></i>
+                    </label>
+                    <ul class="nav__bar">
+                        <li class="nav__bar-item"> <a href="#" class="nav__bar-item-link">Home</a> </li>
+                        <li class="nav__bar-item"> <a href="#" class="nav__bar-item-link">Menu</a> </li>
+                        <li class="nav__bar-item"> <a href="#" class="nav__bar-item-link">Our story</a> </li>
+                        <li class="nav__bar-item"> <a href="#" class="nav__bar-item-link">Contact us</a> </li>
+                        <li class="intro__start nav__bar-intro">
+                            <div class="intro__start-contact nav__bar-intro-contact">
+                                <p class="intro__start-contact-title">Express delivery</p>
+                                <p class="intro__start-contact-phone"><a href="tel:1800 528 888">1800 528 888</a></p>
+                            </div>
+                            <i class="fa fa-mobile nav__bar-intro-icon" aria-hidden="true"></i>
+                        </li>
+                    </ul>
+                </nav>
+                <!-- end nav -->
+
+                <!-- start banner -->
+                <div class="banner">
+                    <div class="banner__content">
+                        <div class="banner__content-subtitle">
+                            <img src="./assets/img/leaf.png" alt="" class="banner__content-subtitle-img">
+                            <p class="banner__content-subtitle-text">Are you Hungry
+                            </p>
+                        </div>
+                        <h1 class="banner__content-title">Don't wait!</h1>
+                        <p class="banner__content-des">Let start to order food now</p>
+                        <div class="banner__content-discount">
+                            <p class="banner__content-discount-text">This monday<br/>happy hours</p>
+                            <p class="banner__content-discount-number">1+1=3</p>
+                        </div>
+                        <button class="banner__content-btn">Order now</button>
+                    </div>
+                    <div class="banner__img">
+                        <img class="banner__img-pasta" src="./assets/img/pasta.png" alt="">
+                        <img class="banner__img-tomato" src="./assets/img/tomato.png" alt="">
+                        <img src="./assets/img/dish.png" alt="" class="banner__img-dish">
+                        <img src="./assets/img/leaf-2.png" alt="" class="banner__img-leaf">
+                    </div>
+                </div>
+                <!-- end banner -->
+            </header>
+        </div>
         <!-- end header -->
 
-        <!-- start banner-->
-        <div id="header-banner">
-            <div class="banner">
-                <div class="banner__content">
-                    <div class="banner__content-subtitle">
-                        <img src="./assets/img/leaf.png" alt="" class="banner__content-subtitle-img">
-                        <p class="banner__content-subtitle-text">Are you Hungry
-                        </p>
+        <main>
+            <img src="./assets/img/spaghetti.png" alt="" class="img-decor">
+
+            <section class="container menu-info">
+                <h2 class="menu-info__heading">Choose & enjoy</h2>
+                <p class="menu-info__des">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+            </section>
+
+            <section class="container">
+                <div class="row-meals">
+                    <div class="meals">
+                        <div class="meals__item">
+                            <hr class="meals__item-hr">
+                            <img class="meals__item-img" src="./assets/img/meal-1.png" alt="">
+                        </div>
+                        <div class="meals__text">
+                            <h3 class="meals__text-title">Lorem ispum color</h3>
+                            <p class="meals__text-des">Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
+                            <button class="meals__text-btn">Order now</button>
+                        </div>
+                    </div>
+                    
+                    <div class="meals">
+                        <div class="meals__item">
+                            <hr class="meals__item-hr">
+                            <img class="meals__item-img" src="./assets/img/meal-2.png" alt="">
+                        </div>
+                        <div class="meals__text">
+                            <h3 class="meals__text-title">Lorem ispum color</h3>
+                            <p class="meals__text-des">Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
+                            <button class="meals__text-btn">Order now</button>
+                        </div>
                     </div>
 
-                    <h1 class="banner__content-title">Don't wait!</h1>
-                    <p class="banner__content-des">Let start to order food now</p>
-                    <div class="banner__content-discount">
-                        <p class="banner__content-discount-text">This monday<br/>happy hours</p>
-                        <p class="banner__content-discount-number">1+1=3</p>
+                    <div class="meals">
+                        <div class="meals__item">
+                            <hr class="meals__item-hr">
+                            <img class="meals__item-img" src="./assets/img/meal-3.png" alt="">
+                        </div>
+                        <div class="meals__text">
+                            <h3 class="meals__text-title">Lorem ispum color</h3>
+                            <p class="meals__text-des">Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
+                            <button class="meals__text-btn">Order now</button>
+                        </div>
                     </div>
-                    <button class="banner__content-btn">Order now</button>
                 </div>
-                <div class="banner__img">
-                    <img class="banner__img-pasta" src="./assets/img/pasta.png" alt="">
-                    <img class="banner__img-tomato" src="./assets/img/tomato.png" alt="">
-                    <img src="./assets/img/dish.png" alt="" class="banner__img-dish">
-                    <img src="./assets/img/leaf-2.png" alt="" class="banner__img-leaf">
+            </section>
+
+            <section id="event" class="container">
+                <div class="menu">
+                    <div class="menu_info">
+                        <p class="menu__info-subtitle subtitle">Discover</p>
+                        <h2 class="menu-info__heading">Upcoming events</h2>
+                        <p class="menu-info__des">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                    </div>
+
+                </div>
+            </section>
+
+            <div class="menu__img">
+                <div class="menu__img-slider">
+                    <div class="menu__img-slider-item">
+                        <img class="menu__img-slider-item-img" src="./assets/img/event-1.jpg" alt="">
+                    </div>
+                    <div class="menu__img-slider-item">
+                        <img class="menu__img-slider-item-img"  src="./assets/img/event-2.jpg" alt="">
+                    </div>
+                    <div class="menu__img-slider-item">
+                        <img class="menu__img-slider-item-img"  src="./assets/img/event-3.jpg" alt="">
+                    </div>
+                    <div class="menu__img-slider-item">
+                        <img class="menu__img-slider-item-img"  src="./assets/img/event-4.jpg" alt="">
+                    </div>
                 </div>
             </div>
-        </div>
-        <!-- end banner-->
-        <main>
- 
+
+            <section id="popular-meals">
+                <div class="popular-meals__item popular-meals-1">
+                    <img src="./assets/img/popular-meal-1.png" alt="" class="popular-meals__item-img">
+                    <p class="popular-meals__item-des">Try it today<br><span class="popular-meals__item-des-span">Most<br>Popular<br>Pasta</span></p>
+                </div>
+                <div class="popular-meals__item popular-meals-2">
+                    <div class="popular-meals-grid">
+                        <img src="./assets/img/popular-meal-2.png" alt="" class="popular-meals__item-img">
+                        <p class="popular-meals__item-des">Try it today<br><span class="popular-meals__item-des-span">More fun<br>More taste</span></p>
+                    </div>
+                    <div class="popular-meals-grid">
+                        <img src="./assets/img/popular-meal-3.png" alt="" class="popular-meals__item-img">
+                        <p class="popular-meals__item-des">Try it today<br><span class="popular-meals__item-des-span">Fresh & chili</span></p>
+                    </div>
+                </div>
+            </section>
+
+
+            <section class="container contact">
+                <div class="contact-heading">
+                    <p class="contact-heading-subtitle subtitle">Reservation</p>
+                    <h2 class="contact-heading-title">Book your table</h2>
+                </div>
+                <div class="contact-form">
+                    <input class="form__input" type="text" placeholder="Name">
+                    <input class="form__input" type="email" placeholder="Email">
+                    <input class="form__input" type="date" placeholder="Date">
+                    <input class="form__input" type="time" placeholder="Time">
+                    <input class="form__input" type="number" placeholder="People quantity">
+                    <input class="form__submit" type="submit" type="button" value="Find a table">
+                </div>
+            </section>
         </main>
 
         <footer>
+            <div class="container">
+                <div class="row footer">
+                    <div class="footer-intro">
+                        <div class="footer-intro__item">
+                            <a href="#"><img src="./assets/img/logo-dark.png" alt="" class="logo"></a>
+                        </div>
+                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                    </div>
+                    <div class="footer-contact">
+                        <div class="footer-contact__item">
+                            <i class="fa fa-map-pin" aria-hidden="true"></i>
+                            <p>Main Road, Building Name, Country</p>
+                        </div>
+                        <div class="footer-contact__item">
+                            <i class="fa fa-envelope-open" aria-hidden="true"></i>
+                            <p>info@companyname.com</p>
+                        </div>
+                    </div>
+                </div>
 
+                <div class="row">
+                    <div class="footer-intro"><p>© Company Name 2020. All rights reserved.</p></div>
+                    <div class="footer-contact footer-social">
+                        <img src="./assets/img/insta-icon.png" alt="">
+                        <img src="./assets/img/fb-icon.png" alt="">
+                        <img src="./assets/img/twitter-icon.png" alt="">
+                        <img src="./assets/img/whatsapp-icon.png" alt="">
+                    </div>
+                </div>
+            </div>
         </footer>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/fonts/fontawesome-webfont.ttf"></script>
+
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js" integrity="sha512-XtmMtDEcNz2j7ekrtHvOVR4iwwaD6o/FUJe6+Zq+HgcCsk3kj4uSQQR8weQ2QVj1o0Pk6PwYLohm206ZzNfubg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.js" integrity="sha512-WNZwVebQjhSxEzwbettGuQgWxbpYdoLf7mH+25A7sfQbbxKeS5SQ9QBf97zOY4nOlwtksgDA/czSTmfj4DUEiQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="./assets/js/index.js"></script>
     </body>
 </html>
