'edit file img'

--- a/child-page/info-page.html
+++ b/child-page/info-page.html
@@ -14,26 +14,26 @@
         <section class="info-intro">
             <div class="container text-center">
                 <div class="info-intro__icon">
-                    <img src="./assets/img/plane-icon.png" alt="">
+                    <img src="./assets/img/info-page/plane-icon.png" alt="">
                 </div>
                 <h1>See places you've<br><span>never</span> been before</h1>
                 <p>Lorem ispum Dolor | Lorem ispum Dolor | Lorem ispum Dolor</p>
-                <div class="info-intro__scribble text-left"><img src="./assets/img/scribble-dark.png" alt=""></div>
+                <div class="info-intro__scribble text-left"><img src="./assets/img/info-page/scribble-dark.png" alt=""></div>
             </div>
         </section>
         <section class="natural container" style="margin-bottom: 10">
             <div class="row">
                 <div class="natural-col col-6">
                     <div class="natural-col__main">
-                        <img src="./assets/img/mount.png" alt="">
+                        <img src="./assets/img/info-page/mount.png" alt="">
                     </div>
                     <div class="natural-col__tape">
-                        <img src="./assets/img/tape.png" alt="">
+                        <img src="./assets/img/info-page/tape.png" alt="">
                     </div>
                 </div>
 
                 <div class="natural-second col-6">
-                    <div class="natural-second__img"><img src="./assets/img/mount-2.png" alt=""></div>
+                    <div class="natural-second__img"><img src="./assets/img/info-page/mount-2.png" alt=""></div>
                     <div class="row natural-second__box justify-content-between">
                         <h2>Lorem ipsum dolor sit amet consectetur adipiscing elit sed do ei</h2>
                         <div class="text-justify">
@@ -42,7 +42,7 @@
                         </div>
                     </div>
                     <div class="text-right">
-                        <img src="./assets/img/icon-next.png" alt="">
+                        <img src="./assets/img/info-page/icon-next.png" alt="">
                     </div>
                 </div>
             </div>
@@ -66,7 +66,7 @@
             </div>
             <div class="location-img">
                 <div class="location-img__box"></div>
-                <img src="./assets/img/climb.png" alt="">
+                <img src="./assets/img/info-page/climb.png" alt="">
             </div>
         </section>
 
@@ -120,7 +120,7 @@
                     </div>
                 </div>
                 <div class="faq__img col-4">
-                    <img src="./assets/img/sit.png" alt="">
+                    <img src="./assets/img/info-page/sit.png" alt="">
                 </div>
             </div>
         </section>
